hot fix some overflow problem due to style: height=100%

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -73,6 +73,10 @@ html,body{
   }
 }
 
+.user-input-content *{
+  overflow: scroll;
+}
+
 #header,#menu-wrapper,#footer,#department-links{
   p,span,a,h1,h2,h3,h4{
     color: white;
